--- a/src/libraries/Directory.Build.props
+++ b/src/libraries/Directory.Build.props
@@ -368,7 +368,7 @@
   <Import Project="$(RepositoryEngineeringDir)referenceAssemblies.props" />
 
   <PropertyGroup>
-    <DisableProjectRestore Condition="'$(DisableProjectRestore)' == '' and ('$(MSBuildProjectExtension)' == '.depproj' or '$(MSBuildProjectExtension)' == '.pkgproj')">true</DisableProjectRestore>
+    <DisableProjectRestore Condition="'$(MSBuildProjectExtension)' == '.depproj' or '$(MSBuildProjectExtension)' == '.pkgproj'">true</DisableProjectRestore>
   </PropertyGroup>
 
   <Import Project="$(RepositoryEngineeringDir)restore\repoRestore.props" Condition="'$(DisableProjectRestore)' == 'true'" />
