Update subset rename

--- a/eng/pipelines/libraries/build-test-job.yml
+++ b/eng/pipelines/libraries/build-test-job.yml
@@ -55,7 +55,7 @@ jobs:
             cleanUnpackFolder: false
 
         - script: $(_buildScript)
-                -subset tests
+                -subset test
                 $(_buildArguments)
                 $(_archiveTestsParameter)
           displayName: Restore and Build
