--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ msbuild.log
 msbuild.err
 msbuild.wrn
 msbuild.binlog
+msbuild.ProjectImports.zip
 .deps/
 .dirstamp
 .libs/
@@ -159,6 +160,8 @@ DocProject/Help/html
 project.lock.json
 project.assets.json
 *.nuget.dgspec.json
+nuget.binlog
+nuget.ProjectImports.zip
 
 # Windows Azure Build Output
 csx/
