Fix Newtonsoft packagerefs

--- a/src/libraries/Microsoft.Extensions.Configuration.UserSecrets/tests/Microsoft.Extensions.Configuration.UserSecrets.Tests.csproj
+++ b/src/libraries/Microsoft.Extensions.Configuration.UserSecrets/tests/Microsoft.Extensions.Configuration.UserSecrets.Tests.csproj
@@ -7,7 +7,10 @@
 
   <ItemGroup>
     <ReferenceFromRuntime Include="Microsoft.Extensions.Configuration.UserSecrets" />
-    <Reference Include="Newtonsoft.Json" Condition="'$(TargetFramework)' == 'net472'"/>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
+    <PackageReference Include="Newtonsoft.Json" Version="$(NewtonsoftJsonVersion)" />
   </ItemGroup>
 
   <ItemGroup>
